--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "inngest": "^3.48.1",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
     "pg": "^8.16.3",
